# agent_bridge

./: .gitignore  ARCHITECTURE_SPEC.md  CONTRIBUTING.md  README.md  demo_standalone.py  pyproject.toml
.github/workflows/: test.yml
adapters/: django_adapter.py  fastapi_adapter.py  flask_adapter.py
adapters/__pycache__/: django_adapter.cpython-311.pyc.2650669066464  fastapi_adapter.cpython-311.pyc.2650669066464  flask_adapter.cpython-311.pyc.2650669066464
agent/: __init__.py  demo.py  graph.py  state.py  tools.py
agentbridge/: __init__.py  action.py  audit.py  bridge.py  permissions.py  registry.py  schemas.py  server.py
agentbridge.egg-info/: tmpolrbs_cv
agentbridge/__pycache__/: __init__.cpython-311.pyc.1490822515760  __init__.cpython-311.pyc.2594734869808  __init__.cpython-311.pyc.2650669066464  action.cpython-311.pyc.2594735298736  action.cpython-311.pyc.2650669066464  audit.cpython-311.pyc.2369679366096  bridge.cpython-311.pyc.2594735299408  bridge.cpython-311.pyc.2650669066464  permissions.cpython-311.pyc.2369677489840  permissions.cpython-311.pyc.2650669066464  registry.cpython-311.pyc.2594735997232  registry.cpython-311.pyc.2650669066464  schemas.cpython-311.pyc.2254366949760  schemas.cpython-311.pyc.2650669066464  server.cpython-311.pyc.2369679624208  server.cpython-311.pyc.2650669066464
agentbridge/adapters/: __init__.py  django_adapter.py  fastapi_adapter.py  flask_adapter.py
ai_risk_gateway/: __init__.py  constants.py  exceptions.py  gateway.py  registry.py
ai_risk_gateway/config/: __init__.py  settings.py
ai_risk_gateway/engines/: __init__.py  decision_engine.py  policy_engine.py  risk_scorer.py
ai_risk_gateway/models/: __init__.py  action.py  context.py  decision.py  violation.py
ai_risk_gateway/policies/: __init__.py  base.py
ai_risk_gateway/providers/: __init__.py  base_state_provider.py  in_memory_provider.py
docs/: quickstart.md  spec.md  web-mcp-compatibility.md  web_mcp_combalitibily.md
examples/: basic_example.py  crm_example.py  ecommerce_example.py
tests/: test_bridge.py  test_permissions.py  test_registry.py
(+12 files in other folders)
